--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow: auto;
 }
 
 .app {
@@ -11,11 +12,11 @@ body {
 }
 .app.light {
   background-color: rgb(204, 228, 250);
-  transition: background-color 0.2s linear;
+  transition: background-color 0.4s linear;
 }
 .app.dark {
   background: #222;
-  transition: background-color 0.2s linear;
+  transition: background-color 0.4s linear;
 }
 
 .container {
@@ -33,6 +34,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  height: 40px;
 }
 
 .btn {
@@ -49,6 +51,7 @@ body {
   border: none;
   font-weight: 600;
   cursor: pointer;
+  color: #444;
 }
 
 .run-btn {
@@ -59,27 +62,20 @@ body {
   background: rgb(37, 138, 42);
   color: white;
 }
-
+.theme-btn {
+  width: 70px;
+}
+.theme-btn:hover {
+  background: #555;
+  color: white;
+}
 .clear-btn {
   background: rgb(221, 85, 85);
   color: rgb(82, 10, 10);
 }
 .clear-btn:hover {
-  background: rgb(165, 38, 38);
+  background: rgb(199, 46, 46);
   color: white;
-}
-
-.editor-title {
-  background: whitesmoke;
-  width: 100px;
-  padding: 8px 0 2px 10px;
-  border-radius: 5px 5px 0 0;
-}
-
-.codemirror-input,
-.codemirror-output {
-  flex-grow: 1;
-  overflow: hidden;
 }
 
 .CodeMirror {
@@ -88,28 +84,32 @@ body {
   border-radius: 0 0px 5px 5px;
   width: 100%;
   overflow-y: auto;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
 }
 
 .console {
   display: flex;
   flex-direction: column;
-  background: #222;
   height: 240px;
-  overflow-y: auto;
+  overflow: scroll;
   padding-left: 14px;
   color: white;
+  font-family: "Roboto", sans-serif;
 }
+
 .console.light {
   background: rgb(95, 104, 112);
+  transition: background-color 0.8s linear;
 }
 .console.dark {
   background: #333;
+  transition: background-color 0.8s linear;
 }
 .cnsl-line {
-  padding: 0;
-  height: 4px;
-  font-size: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
+  padding: 6px;
+  /* height: 4px; */
+  /* font-size: 1rem; */
 }
 
 /* // react-split
@@ -123,3 +123,35 @@ body {
 .gutter-vertical {
   cursor: ns-resize;
 } */
+
+/*  ----  micro animations ----- */
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.fade-in {
+  opacity: 1;
+  transition: all 1s ease-out;
+  animation-name: fade-in;
+}
+
+/* theme button animation */
+.theme-icon {
+  animation-duration: 0.6s;
+  animation-name: fade-up;
+}
+@keyframes fade-up {
+  from {
+    margin-top: 100%;
+    /* width: 300%; */
+    opacity: 0;
+  }
+  to {
+    margin-top: 0%;
+    opacity: 1;
+  }
+}
