--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,17 +1,22 @@
+// Variables
+$border:#707070 solid 1px;
+
+
 body {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  overflow: auto;
+  // overflow: auto;
 }
+
 
 .app {
   height: 100vh;
 }
 .app.light {
-  background-color: rgb(204, 228, 250);
+  // background-color: rgb(204, 228, 250);
   transition: background-color 0.4s linear;
 }
 .app.dark {
@@ -19,87 +24,112 @@ body {
   transition: background-color 0.4s linear;
 }
 
-.container {
-  margin: auto;
-  max-width: 900px;
-  padding: 10px;
-}
-
-.editor {
-  margin-top: 20px;
-  margin-bottom: 5px;
-}
-
-.editor-header {
+.editor-container {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  height: 40px;
+  max-width: 900px;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding-top: 2rem;
+  
+  .editor {
+    width: 100%;
+    border: $border;
+    border-bottom: 0;
+
+    .CodeMirror {
+      font-size: 1.1rem;
+      // font-family: "Roboto", sans-serif;
+      margin: 0 14px 0 14px;
+      border: $border;
+      border-top: 0;
+    }
+  }
+
+  .button-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 300px;
+
+    .theme-btn{
+      width: 60px;
+      height: 60px;
+    }
+  }
 }
 
 .btn {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  width: 90px;
-  padding: 10px;
-  border-radius: 5px 5px 0 0;
+  width: 80px;
+  height: 100px;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   -webkit-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
-  border: none;
-  font-weight: 600;
+  font-size: 1.2rem;
   cursor: pointer;
   color: #444;
+  border: $border;
 }
 
+
+
 .run-btn {
-  background: rgb(51, 201, 89);
-  color: rgb(23, 119, 28);
 }
 .run-btn:hover {
-  background: rgb(37, 138, 42);
-  color: white;
 }
 .theme-btn {
-  width: 70px;
 }
 .theme-btn:hover {
   background: #555;
   color: white;
 }
 .clear-btn {
-  background: rgb(221, 85, 85);
-  color: rgb(82, 10, 10);
 }
 .clear-btn:hover {
   background: rgb(199, 46, 46);
   color: white;
 }
 
-.CodeMirror {
-  font-size: 1.1rem;
-  padding: 5px;
-  border-radius: 0 0px 5px 5px;
-  width: 100%;
-  overflow-y: auto;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+
+
+.bottom-container {
+  display: flex;
+  max-width: 900px;
+  margin: auto;
+
+  .console-wrapper{
+    width: 100%;
+    padding: 0 14px 14px 14px;
+    border: $border;
+    border-top: 0;
+
+    .console {
+      display: flex;
+      flex-direction: column;
+      border: $border;
+      border-top: 0;
+      height: 240px;
+      overflow: scroll;
+      padding: 2px 14px 2px 8px;
+      // color: white;
+      font-family: "Roboto", sans-serif;
+    }
+  }
+
+  .btn{
+
+  }
 }
 
-.console {
-  display: flex;
-  flex-direction: column;
-  height: 240px;
-  overflow: scroll;
-  padding-left: 14px;
-  color: white;
-  font-family: "Roboto", sans-serif;
-}
 
 .console.light {
-  background: rgb(95, 104, 112);
+  background: rgb(248, 248, 240);
   transition: background-color 0.8s linear;
 }
 .console.dark {
