--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 // Variables
-$border:#707070 solid 1px;
+$main-color: #2A2E5D;
+$border:$main-color solid 2px;
 
 
 body {
@@ -32,6 +33,7 @@ body {
   margin: auto;
   padding-top: 2rem;
   
+  
   .editor {
     width: 100%;
     border: $border;
@@ -56,6 +58,13 @@ body {
     .theme-btn{
       width: 60px;
       height: 60px;
+      -webkit-box-shadow: -3px 20px 0px 0px $main-color; 
+      box-shadow: 0px 12px 0px -5px $main-color;
+    }
+
+    .run-btn{
+      -webkit-box-shadow: -3px 20px 0px 0px $main-color; 
+      box-shadow: -5px 14px 0px -5px $main-color;
     }
   }
 }
@@ -73,13 +82,14 @@ body {
   transition: all 0.2s ease-in;
   font-size: 1.2rem;
   cursor: pointer;
-  color: #444;
+  color: $main-color;
   border: $border;
 }
 
 
 
 .run-btn {
+  
 }
 .run-btn:hover {
 }
@@ -108,6 +118,8 @@ body {
     padding: 0 14px 14px 14px;
     border: $border;
     border-top: 0;
+    -webkit-box-shadow: 0px 20px 0px -10px $main-color; 
+    box-shadow: 0px 20px 0px -10px $main-color;
 
     .console {
       display: flex;
@@ -123,7 +135,8 @@ body {
   }
 
   .btn{
-
+    -webkit-box-shadow: -3px 20px 0px 0px $main-color; 
+    box-shadow: -5px 14px 0px -5px $main-color;
   }
 }
 
