--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,7 @@ body{
   grid-template-areas:
   'top  buttons'
   'bottom  buttons';
+  
 
   .top-container {
     display: flex;
@@ -39,6 +40,7 @@ body{
       width: 100%;
       border: $border;
       border-bottom: 0;
+      background: #C3FAFF;
       
       .CodeMirror {
         font-size: 1.1rem;
@@ -77,12 +79,24 @@ body{
       -webkit-box-shadow: -3px 20px 0px 0px $main-color; 
       box-shadow: -5px 14px 0px -5px $main-color;
     }
+
+    .run-btn{
+      background: rgb(12,204,175);
+      background: linear-gradient(90deg, rgba(12,204,175,1) 0%, rgba(195,250,255,1) 100%);
+    }
     
     .theme-btn{
       width: 60px;
       height: 60px;
+      background: #FFFDCD;
       -webkit-box-shadow: -3px 20px 0px 0px $main-color; 
       box-shadow: 0px 12px 0px -5px $main-color;
+      
+    }
+
+    .clear-btn{
+      background: rgb(245,80,49);
+      background: linear-gradient(90deg, rgba(245,80,49,1) 0%, rgba(255,253,205,1) 100%);
     }
 
   }
@@ -90,6 +104,11 @@ body{
   .bottom-container{
     width: 100%;
     // max-width: $desktop-max-width;
+    background: #C3FAFF;
+
+    .console{
+      background: #DDD;
+    }
   }
 }
 
@@ -106,11 +125,12 @@ body{
     padding: 1rem;
     border: $border;
     border-bottom:0;
+    background:  #89E7FF;
 
     .editor-header-inner{
       width: 100%;
       height: 10px;
-      background: rgb(135, 138, 175);
+      background: #638EE8;
     }
   }
 }
@@ -139,6 +159,8 @@ body{
         border-bottom: 0;
         padding: 4px 0 4px 0;
         height: 54px;
+        background: #C3FAFF;
+
 
         .btn{
           flex-direction: row;
