fixed bg images

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@ $desktop-max-width: 1000px;
 $transition: all ease 0.3s;
 
 .app-wrapper {
-  background: url("./images/BG-Lightmode.png") no-repeat 0 0;
+  background: url("https://images2.imgbox.com/f9/3b/fLmrubTC_o.png") no-repeat 0 0;
   background-size: cover;
   height: 100vh;
   -webkit-transition: background-image 0.2s ease-in-out;
@@ -399,7 +399,7 @@ $transition: all ease 0.3s;
 ////////////////////////////////////////////////
 ///////////// DARK MODE ////////////////////////
 .app-wrapper.dark {
-  background: url("./images/BG-Darkmode.png") no-repeat 0 0;
+  background: url("https://images2.imgbox.com/3d/c0/gUyfHucX_o.png") no-repeat 0 0;
   background-size: cover;
 
   .top-container {
